# IFOL

./: .gitignore  IFOL.opam  configure.sh
.github/: test.yaml
.github/workflows/: test.yaml
src/Examples/HA/: SampleProofs.v
src/Examples/HA/Semantics/: Signature.v  Sort.v  Theory.v
src/Examples/HA/Syntax/: Signature.v  Sort.v  Theory.v
src/Semantics/: Formula.v  Proof.v  Signature.v  Term.v  Theory.v
src/Syntax/: Formula.v  Proof.v  Signature.v  Term.v  Theory.v
src/Util/: BList.v  BVec.v  HVec.v  List_index.v  RHVec.v  Witness.v
